# python_bac_inter

./: README.md  output.csv  package-lock.json  pyproject.toml  results.csv
.github/workflows/: ci.yml  cl.yml
pubmed_fetcher/: __init__.py  cli.py  fetcher.py
tests/: .gitignore  test_fetcher.py
