[tool.poetry]
name = "python_bac_inter"
version = "0.1.0"
# ... other existing config ...

[tool.poetry.dependencies]
python = "^3.8"
biopython = "^1.80"
pandas = "^1.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
python-dotenv = "^1.0.0"

[tool.poetry.group.test.dependencies]
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"