[tool.poetry]
name = "python-bac-inter"  # Must be lowercase with hyphens
version = "0.1.0"
description = "PubMed paper fetcher with company affiliation filtering"  # Required
authors = ["Your Name <your.email@example.com>"]  # Required
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
biopython = "^1.80"
pandas = "^1.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[tool.poetry.group.test.dependencies]
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"